# APPNUWS

./: README.md
analyzer/: README  env-rAPPNUWS.sh
converters/: .gitignore  CMakeLists.txt  ConvertHits.sh  readHits.cc
simulation/: .gitignore  checkG4data.sh  (+2 more)
simulation/g4APPNUWS/: CMakeLists.txt  LaunchSims.sh  g4APPNUWS.cc
simulation/g4APPNUWS/CARGO/: CMakeLists.txt
simulation/g4APPNUWS/CARGO/include/: CARGOBuilder.hh  CARGOMaker.hh  CARGOdescription.hh  CARGOtargetSD.hh
simulation/g4APPNUWS/CARGO/src/: CARGOBuilder.cc  CARGOMaker.cc  CARGOdescription.cc  CARGOtargetSD.cc
simulation/g4APPNUWS/CSMBT/: CMakeLists.txt
simulation/g4APPNUWS/CSMBT/include/: CSMBTAbsorber.hh  CSMBTBuilder.hh  CSMBTLadderSD.hh  CSMBTMaker.hh  CSMBTROGeometryHandle.hh  CSMBtracker.hh
simulation/g4APPNUWS/CSMBT/src/: CSMBTAbsorber.cc  CSMBTBuilder.cc  CSMBTLadderSD.cc  CSMBTMaker.cc  CSMBTROGeometryHandle.cc  CSMBtracker.cc
simulation/g4APPNUWS/CSMTT/: CMakeLists.txt
simulation/g4APPNUWS/CSMTT/include/: CSMTTAbsorber.hh  CSMTTBuilder.hh  CSMTTLadderSD.hh  CSMTTMaker.hh  CSMTTROGeometryHandle.hh  CSMTtracker.hh
simulation/g4APPNUWS/CSMTT/src/: CSMTTAbsorber.cc  CSMTTBuilder.cc  CSMTTLadderSD.cc  CSMTTMaker.cc  CSMTTROGeometryHandle.cc  CSMTtracker.cc
simulation/g4APPNUWS/CSMV/: CMakeLists.txt
simulation/g4APPNUWS/CSMV/include/: CSMVAbsorber.hh  CSMVBuilder.hh  CSMVLadderSD.hh  CSMVMaker.hh  CSMVROGeometryHandle.hh  CSMVtracker.hh
simulation/g4APPNUWS/CSMV/src/: CSMVAbsorber.cc  CSMVBuilder.cc  CSMVLadderSD.cc  CSMVMaker.cc  CSMVROGeometryHandle.cc  CSMVtracker.cc
simulation/g4APPNUWS/DCHbs/: CMakeLists.txt
simulation/g4APPNUWS/DCHbs/include/: DCHbsCell.hh  DCHbsCellDetail.hh  DCHbsCellGeometryHandle.hh  DCHbsCellId.hh  DCHbsCellWallDetail.hh  DCHbsFoil.hh  DCHbsFoilDetail.hh  DCHbsFoilId.hh  DCHbsLayer.hh  DCHbsLayerDetail.hh  DCHbsLayerId.hh  DCHbsWall.hh  DCHbsWire.hh  DCHbsWireDetail.hh  DCHbsWireId.hh
simulation/g4APPNUWS/DCHbs/src/: DCHbsCell.cc  DCHbsCellDetail.cc  DCHbsCellGeometryHandle.cc  DCHbsCellId.cc  DCHbsCellWallDetail.cc  DCHbsFoil.cc  DCHbsFoilDetail.cc  DCHbsFoilId.cc  DCHbsLayer.cc  DCHbsLayerDetail.cc  DCHbsLayerId.cc  DCHbsWall.cc  DCHbsWire.cc  DCHbsWireDetail.cc  DCHbsWireId.cc
simulation/g4APPNUWS/EXCEP/include/: manageException.hh
simulation/g4APPNUWS/EXCEP/src/: manageException.cc
simulation/g4APPNUWS/FLOOR/: CMakeLists.txt
simulation/g4APPNUWS/FLOOR/include/: FLOORBuilder.hh  FLOORMaker.hh  FLOORdescription.hh
simulation/g4APPNUWS/FLOOR/src/: FLOORBuilder.cc  FLOORMaker.cc  FLOORdescription.cc
simulation/g4APPNUWS/GENELMbs/: CMakeLists.txt
simulation/g4APPNUWS/GENELMbs/include/: GENELMbsBoxkind.hh  GENELMbsBoxkindDetail.hh  GENELMbsBoxkindId.hh  GENELMbsCylkind.hh  GENELMbsCylkindDetail.hh  GENELMbsCylkindId.hh
simulation/g4APPNUWS/GENELMbs/src/: GENELMbsBoxkind.cc  GENELMbsBoxkindDetail.cc  GENELMbsBoxkindId.cc  GENELMbsCylkind.cc  GENELMbsCylkindDetail.cc  GENELMbsCylkindId.cc
simulation/g4APPNUWS/GEOMSRVC/include/: ConstructMaterials.hh  GeomHandle.hh  GeomService.hh  SensitiveDetector.hh  SensitiveDetectorName.hh  SimG4TrackerSD.hh  VolumeInfo.hh  findMaterialOrThrow.hh
simulation/g4APPNUWS/GEOMSRVC/src/: ConstructMaterials.cc  GeomService.cc  SensitiveDetector.cc  SensitiveDetectorName.cc  SimG4TrackerSD.cc  VolumeInfo.cc  findMaterialOrThrow.cc  utilFunctions.cc
simulation/g4APPNUWS/IOSRVC/: CMakeLists.txt
simulation/g4APPNUWS/IOSRVC/include/: RootIO.hh  SimG4Classes.hh  SimG4Particle.hh  SimG4TrackerHit.hh
simulation/g4APPNUWS/IOSRVC/src/: LinkDef.hh  RootIO.cc  SimG4Particle.cc  SimG4TrackerHit.cc
simulation/g4APPNUWS/PXSTbs/: CMakeLists.txt
simulation/g4APPNUWS/PXSTbs/include/: PXSTbsLadder.hh  PXSTbsLadderDetail.hh  PXSTbsLadderId.hh  PXSTbsLayer.hh  PXSTbsLayerDetail.hh  PXSTbsLayerId.hh  PXSTbsROGeometryHandle.hh  PXSTbsReadOut.hh  PXSTbsReadOutDetail.hh  PXSTbsReadOutId.hh
simulation/g4APPNUWS/PXSTbs/src/: PXSTbsLadder.cc  PXSTbsLadderDetail.cc  PXSTbsLadderId.cc  PXSTbsLayer.cc  PXSTbsLayerDetail.cc  PXSTbsLayerId.cc  PXSTbsROGeometryHandle.cc  PXSTbsReadOut.cc  PXSTbsReadOutDetail.cc  PXSTbsReadOutId.cc
simulation/g4APPNUWS/TRUCK/: CMakeLists.txt
simulation/g4APPNUWS/TRUCK/include/: TRUCKBuilder.hh  TRUCKMaker.hh  TRUCKdescription.hh
simulation/g4APPNUWS/TRUCK/src/: TRUCKBuilder.cc  TRUCKMaker.cc  TRUCKdescription.cc
simulation/g4APPNUWS/config/: cargo_v00.txt  cargo_v01.txt  cargo_v02.txt  cargo_v03.txt  csmbt_v00-APPNUWS.txt  csmbt_v00.txt  csmtt_v00-APPNUWS.txt  csmtt_v00.txt  csmv_v00-APPNUWS.txt  floor_v00.txt  floor_v01.txt  geom_APPNUWS.txt  geom_APPNUWS_1.txt  geom_APPNUWS_emptycg.txt  geom_APPNUWS_notruck.txt  geom_APPNUWS_onlyDetectors.txt  geom_APPNUWS_onlyTarget.txt  geom_APPNUWS_testExtMuTom.txt  truck_fake.txt  truck_fake_testExtMuTom.txt  truck_v00.txt  truck_v01.txt
simulation/g4APPNUWS/g4mac/: runCRY.mac  runFakeCR.mac  runFakeCRtest.mac  runFakeCRtestresol.mac  runPGun.mac
simulation/g4APPNUWS/include/: APPNWG4ActionInitialization.hh  APPNWG4DetectorConstruction.hh  APPNWG4DetectorMessenger.hh  APPNWG4EventAction.hh  APPNWG4FieldMessenger.hh  APPNWG4FieldSetup.hh  APPNWG4GPSPrimaryGeneratorAction.hh  APPNWG4MagneticField.hh  APPNWG4PrimaryGeneratorAction.hh  APPNWG4PrimaryGeneratorMessenger.hh  APPNWG4RunAction.hh  APPNWG4TrackingAction.hh  CRYPrimaryGenerator.hh  CRYPrimaryGeneratorMessenger.hh  HepMCG4AsciiReader.hh  HepMCG4AsciiReaderMessenger.hh  HepMCG4Interface.hh  HepMCG4PythiaInterface.hh  HepMCG4PythiaMessenger.hh
simulation/g4APPNUWS/src/: APPNWG4ActionInitialization.cc  APPNWG4DetectorConstruction.cc  APPNWG4DetectorMessenger.cc  APPNWG4EventAction.cc  APPNWG4FieldMessenger.cc  APPNWG4FieldSetup.cc  APPNWG4GPSPrimaryGeneratorAction.cc  APPNWG4MagneticField.cc  APPNWG4PrimaryGeneratorAction.cc  APPNWG4PrimaryGeneratorMessenger.cc  APPNWG4RunAction.cc  APPNWG4TrackingAction.cc  CRYPrimaryGenerator.cc  CRYPrimaryGeneratorMessenger.cc  HepMCG4AsciiReader.cc  HepMCG4AsciiReaderMessenger.cc  HepMCG4Interface.cc  HepMCG4PythiaInterface.cc  HepMCG4PythiaMessenger.cc
(+87 files in other folders)
